[package]
name = "ss-demo2"
version = "0.1.0"
authors = ["shawn <yu.zhang@jian24.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"